--- a/app/views/layouts/_show_product.html.erb
+++ b/app/views/layouts/_show_product.html.erb
@@ -24,7 +24,7 @@
           <% if p.quantity == 0 %>
             <i> This item is currently out of stock. </i>
           <% else %>
-    *****TODO****<%= submit_tag "Add to Cart" %>
+          <%= button_tag "Add to cart", name: "product_id", value: p.id %>
           <% end %>
          </td>
             <% end %>   
