--- a/app/views/layouts/_show_product.html.erb
+++ b/app/views/layouts/_show_product.html.erb
@@ -20,13 +20,14 @@
                       <center><h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4></center>
                   <% end %>
           <h4 style="color: #927017"><p><center><%= p.description %></p></h4></center>
-          <h5><a href="/main/more_info/<%= p.id %>">More details and applications...</a></h5>
+          <h5><a href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
+                More details and applications...</a></h5>
           <% if p.quantity == 0 %>
             <i> This item is currently out of stock. </i>
           <% else %>
-          <%= button_tag "Add to cart", name: "product_id", value: p.id %>
-          <%= label_tag :quantity %><br>
-          <%= text_field_tag :quantity, 1, size: 1 %>
+            <%= label_tag :quantity %>
+            <%= text_field_tag :quantity, 1, size: 1 %>
+            <%= button_tag "Add to cart", name: "product_id", value: p.id %>
           <% end %>
          </td>
             <% end %>   
