--- a/app/views/carts/final_cart.html.erb
+++ b/app/views/carts/final_cart.html.erb
@@ -27,7 +27,7 @@
 </table>
 
 <br>
-
+****TODO: Select payment method  ******
 <%= submit_tag 'Place Order' %><br><br>
 <% end %>
 <!--<%= link_to 'New Cart', new_cart_path %>--!>
