--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,15 +1,11 @@
-<h1>Listing carts</h1>
+<h1>Cart</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Product</th>
-      <th>Name</th>
+      <th>Product Name</th>
       <th>Quantity</th>
-      <th>Ship method</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Price</th>
     </tr>
   </thead>
 
@@ -17,11 +13,9 @@
     <% @carts.each do |cart| %>
     <% p = Product.find(cart.product_id) %>
       <tr>
-        <td><%= cart.product_id %></td>
         <td><%= p.name %></td>
         <td><%= cart.quantity %></td>
-        <td><%= cart.ship_method %></td>
-        <td><%= link_to 'Show', cart %></td>
+        <td>$<%= "%.2f" % cart.price %></td>
         <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
         <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -29,7 +23,21 @@
   </tbody>
 </table>
 
+******TODO: unhardcode*******
+find CO tax rate
+<hr style="color:#c00;background-color:black;height:1px;border:none;" />
+
+<table class="table">
+<% products_total = Cart.where(cart_id: session[:cart_id]).sum(:price) %>
+<tr><td><%= "Products total: $#{"%.2f" % products_total}" %></td></tr>
+<% ship_cost = 5 %>
+<tr><td><%= "Shipping cost: $#{"%.2f" % ship_cost}" %> </td></tr>
+<% tax = products_total * 0.05 %>
+<tr><td><%= "Taxes: $#{"%.2f" %  tax}" %></td></tr>
+<tr><td> <b><%= "Order total: $#{"%.2f" % (ship_cost + tax + products_total)}" %></b></td></tr>
+</table>
 <br>
+
 <%= link_to 'Continue Shopping', home_page_path %><br><br>
 <%= link_to 'Checkout', ship_info_path %><br><br>
 
