ATSrails_ notes for credit card gem, started e-mail for receipt

--- a/app/views/carts/final_cart.html.erb
+++ b/app/views/carts/final_cart.html.erb
@@ -1,16 +1,12 @@
 <%= form_tag place_order_path, method: "PUT" do %>
 <h1>Order</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Product</th>
-      <th>Name</th>
+      <th>Product Name</th>
       <th>Quantity</th>
-      <th>Ship method</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Price</th>
     </tr>
   </thead>
 
@@ -18,10 +14,10 @@
     <% @carts.each do |cart| %>
     <% p = Product.find(cart.product_id) %>
       <tr>
-        <td><%= cart.product_id %></td>
         <td><%= p.name %></td>
         <td><%= cart.quantity %></td>
-        <td><%= cart.ship_method %></td>
+        <td>$<%= "%.2f" % cart.price %></td>
+      </tr>
     <% end %>
   </tbody>
 </table>
