--- a/app/views/layouts/_button.html.erb
+++ b/app/views/layouts/_button.html.erb
@@ -3,7 +3,7 @@
 <div class="col-md-12">
 <div class="form-group">
   <% Category.order(:id).each do |c| %>
-    <a class="btn btn-primary" href='/main/<%= c.name %>'><%= c.name %></a>
+    <a class="btn btn-primary" href='/main/<%= c.id %>'><%= c.name %></a>
   <% end %>
     <a class="btn btn-danger" href='/'>Home</a>
     <a class="btn btn-info" href='/main/about'>About</a>
