--- a/app/views/layouts/_show_product.html.erb
+++ b/app/views/layouts/_show_product.html.erb
@@ -8,7 +8,7 @@
           <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img>
         </a>
       </th>
-        <td><b><h3 class="pad" style="color: #550808"><%= p.name.upcase %></h3></b>
+        <td><b><h3 class="pad" style="color: #550808"><%= p.name.titlecase %></h3></b>
           <b><center><p style="color=black"><i>price  </i>$<%= "%.2f" % p.price %></p></center></b>
             <% CategorySale.where(category_id: p.category_id).each do |s| %>
               <% if s.percent_off > 1 %>
