--- a/public/stylesheets/ats.css
+++ b/public/stylesheets/ats.css
@@ -37,6 +37,11 @@
   text-shadow: 1px 1px 1px rgb(0, 133, 255);
 }
 
+cart_table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 .thumbnail_img:hover {
     background-color: transparent;
     z-index: 100;
