ATSrails_added "out_of_stock" helper which has the "add_to_cart" helper within

--- a/app/views/main/more_info.html.erb
+++ b/app/views/main/more_info.html.erb
@@ -23,12 +23,11 @@
                     <% end %>
                   <% end %>
                 <% end %>
-              <h4 class="pad"><%= @product.description %></h4>
-              <%= button_tag "Add to cart", name: "product_id", value: @product.id %>
+                      <h4 class="pad"><%= @product.description %></h4>
+                      <%= out_of_stock(@product.quantity, @product.id) %>
           </td>
       </table>             
     </div>         
   </div>
 </div>
-
 <% end %>
