--- a/app/views/layouts/_show_product.html.erb
+++ b/app/views/layouts/_show_product.html.erb
@@ -10,29 +10,29 @@
       </th>
         <td><b><h3 class="pad" style="color: #550808"><%= p.name.titlecase %></h3></b>
           <b><center><p style="color=black"><i>price  </i>$<%= "%.2f" % p.price %></p></center></b>
-            <% CategorySale.where(category_id: p.category_id).each do |s| %>
-              <% if s.percent_off > 1 %>
-                <% price = (p.price) * ((100 - s.percent_off)/100) %>
+            <% CategorySale.where(category_id: p.category_id).each do |sale| %>
+              <% if sale.percent_off > 1 %>
+                <% price = (p.price) * ((100 - sale.percent_off)/100) %>
+                  <center><h4 class="pad" style="color: red">
+                    <%= "Sales Price! $ #{"%.2f" % price}" %></h4></center>
+                  <h4 style="color: #927017"><p><center>
+                    <%= p.description.capitalize %></p></h4></center>
+                  <h5><a href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
+                    More details and applications...</a></h5>
+                    <%= out_of_stock(p.quantity, p.id) %>
+              <% else %>
+                <% if p.percent_off > 1 %>
+                  <% price = (p.price) * ((100-p.percent_off)/100) %>
                   <center><h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4></center>
-                <% else %>
-                  <% if p.percent_off > 1 %>
-                    <% price = (p.price) * ((100-p.percent_off)/100) %>
-                      <center><h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4></center>
-                  <% end %>
-          <h4 style="color: #927017"><p><center><%= p.description %></p></h4></center>
-          <h5><a href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
-                More details and applications...</a></h5>
-          <% if p.quantity == 0 %>
-            <i> This item is currently out of stock. </i>
-          <% else %>
-            <%= label_tag :quantity %>
-            <%= text_field_tag :quantity, 1, size: 1 %>
-            <%= button_tag "Add to cart", name: "product_id", value: p.id %>
-          <% end %>
-         </td>
-            <% end %>   
+                <% end %>
+                  <h4 style="color: #927017"><p><center><%= p.description.capitalize %></p></h4></center>
+                  <h5><a href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
+                    More details and applications...</a></h5>
+                  <%= out_of_stock(p.quantity, p.id) %>
+        </td>
+              <% end %>   
     </table> 
-  <% end %>    
+<% end %>    
 </div> 
 <% end %>
 </div>
