ATSrails_removed show helpers

--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,9 +1,8 @@
-<!-- setup controller for form_tag
-<%= form_tag "/carts/:id", method: "PUT" do %>
---!>
-<h1>Cart</h1>
+<%= form_tag "/carts" do %>
+
+<h2 style="color: rgba(3, 3, 100, 0.8)">Product List</h2>
 <div class="row pad">
-<div class="col-md-4 pull-left">
+<div class="col-md-5 pull-left">
   <table class="table-condensed table-striped table-border">
     <thead>
       <tr>
@@ -17,11 +16,11 @@
       <% @carts.each do |cart| %>
       <% p = Product.find(cart.product_id) %>
         <tr>
-          <td><%= p.name %></td>
+          <td><%= p.name.titleize %></td>
           <td style="text-align: right">$<%= "%.2f" % cart.price %></td>
           <td style="text-align: right"><%= text_field_tag :quantity, cart.quantity, size: 1 %>
-              <%= submit_tag "update"%></td>
-       
+            <h5><%= submit_tag "update"%></h5>
+          </td> 
   <!--        
           <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
           <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -52,13 +51,12 @@ find CO tax rate
         <%= "Order total:    $#{"%.2f" % (ship_cost + tax + products_total)}" %>
       </b></h4></td></tr></h4>
   </table><br>
-    <%= link_to 'Continue Shopping', home_page_path %><br><br>
-    <%= link_to 'Checkout', final_cart_path %><br><br>
+        <%= link_to 'Continue Shopping', home_page_path %><br><br>
+        <%= link_to 'Checkout', final_cart_path %><br><br>
 </div>
-  <div class="col-md-4 pull-right">  
+  <div class="col-md-3 pull-right">  
   </div>
 </div>
-
 <!--
 <%= link_to 'New Cart', new_cart_path %>
 --!>
