--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -27,7 +27,7 @@
                     More details and applications...</a></h5>
                       <% if p.quantity > 0 %>
                           <h5 class='pad'>
-                              <%= button_tag "Add to cart", name: 'product_id', value: p.id %>
+                              <%= button_tag "Add to cart", name: "product_id", value: p.id %>
                           </h5>
                       <% else %> 
                         "This item is currently out of stock."
@@ -42,7 +42,7 @@
                     More details and applications...</a></h5>
                       <% if p.quantity > 0 %>
                         <h5 class='pad'>
-                          <%= button_tag "Add to cart", name: 'product_id', value: p.id %>
+                          <%= button_tag "Add to cart", name: "product_id", value: p.id %>
                         </h5>
                       <% else %> 
                         "This item is currently out of stock."
