ATSrails_changed logout render to redirect and after update to redirect_to links

--- a/app/views/layouts/_admin_edit.html.erb
+++ b/app/views/layouts/_admin_edit.html.erb
@@ -6,8 +6,8 @@
 </head>
   <body class="admin">
 
-<a class="pull-right pad" href="/admin/logout"><h4 style="color: white">Log out</h4></a>
-  
+      <a class="pull-left pad" href="/admin/logout"><h2 style="color: white">Log out</h2></a>
+   
   <% yield %>
 
   </body>
