--- a/app/views/admin/links.html.erb
+++ b/app/views/admin/links.html.erb
@@ -1,7 +1,8 @@
 <%= render partial: "layouts/admin_edit" %>
 <ul>
-  <li><a href="/admin/new">add a new product</a></li>
-  <li><a href="/admin/:id/edit">edit and existing product</a></li>
-  <li><a href="/admin/product_sale">put a single product on sale</a></li>
-  <li><a href="/admin/category_sale">put an entire category on sale</a></li>
+  <h2><li><a href="/admin/new">add a new product</a></li>
+      <li><a href="/admin/:id/edit">edit and existing product</a></li>
+      <li><a href="/admin/product_sale">put a single product on sale</a></li>
+      <li><a href="/admin/category_sale">put an entire category on sale</a></li>
+  </h2>
 </ul>
