--- a/app/views/layouts/_admin_edit.html.erb
+++ b/app/views/layouts/_admin_edit.html.erb
@@ -6,8 +6,9 @@
 </head>
   <body class="admin">
 
-      <a class="pull-left pad" href="/admin/logout"><h2 style="color: white">Log out</h2></a>
-   
+      <a class="pull-left pad" href="/admin/logout"><h2 style="color: #1E5A53">Log out</h2></a>
+      <a class="pull-left pad" href="/admin/links"><h2 style="color: #927017">Admin Links</h2></a>
+ 
   <% yield %>
 
   </body>
