ATSrails_ implementation of drop zone for image upload complete

--- a/app/views/admin/form.html.erb
+++ b/app/views/admin/form.html.erb
@@ -1,6 +1,6 @@
-<%= render "layouts/admin_edit" %>
 
-<table border='1'>
+<%= render "layouts/admin_image" %>
+<table class="table">
   <tr>
     <th>ID</th>
     <th>Image</th>
