--- a/app/views/admin/links.html.erb
+++ b/app/views/admin/links.html.erb
@@ -4,5 +4,6 @@
       <li><a style="color: #927017" href="/admin/:id/edit">edit and existing product</a></li>
       <li><a style="color: #1E5A53" href="/admin/product_sale">put a single product on sale</a></li>
       <li><a style="color: #1E5A53" href="/admin/category_sale">put an entire category on sale</a></li>
+      <li><a style="color: #550808" href="/admin/form">upload an image</a></li>
   </h2>
 </ul>
