--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "/index" do %>
+<%= form_tag carts_path, method: "POST" do %>
 <div class="row">
   <center>
     <div class="col-md-12">
