--- a/app/views/layouts/_index_product.html.erb
+++ b/app/views/layouts/_index_product.html.erb
@@ -4,13 +4,25 @@
       <% price = (p.price.to_f) * ((100-s.percent_off)/100) %>
         <div class="col-md-4">
           <table class="table">
+            <% if Image.find_by(name: p.product_code) == nil %>
+              <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
+                <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img>
+              </a>
+            <% else %>
+              <% image = Image.find_by(name: p.product_code) %>
+              <img src="<%= image_data_path(image.id, image.extension) %>" width="150" height="150">
+            <% end %>
             <td class="pad_left"><h2 style="color: black"><%= p.name %></h2>
               <p style="color: gray"><i>regular price $<%= "%.2f" % p.price %></i></p>
               <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4>
               <a href="/main/more_info/<%= p.id %>">More details and applications...</a> 
-              <%= out_of_stock(p.quantity, p.id) %>
-              <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
-              <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img></a>
+              <% if p.quantity > 0 %>
+                <h5 class='pad'>
+                  <%= button_tag "Add to cart", name: "product_id", value: p.id %>
+                </h5>
+              <% else %> 
+                "This item is currently out of stock."
+              <%end %>
             </td>
           </table>
         </div> 
@@ -19,13 +31,25 @@
           <% price = (p.price.to_f) * ((100-p.percent_off)/100) %>
               <div class="col-md-4">
                 <table class="table">
+                  <% if Image.find_by(name: p.product_code) == nil %>
+                    <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
+                      <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img>
+                    </a>
+                  <% else %>
+                    <% image = Image.find_by(name: p.product_code) %>
+                    <img src="<%= image_data_path(image.id, image.extension) %>" width="150" height="150">
+                  <% end %>
                   <td class="pad_left"><h2 style="color: black"><%= p.name %></h2>
                     <p style="color: gray"><i>regular price $<%= "%.2f" % p.price %></i></p>
                     <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4>
                     <a href="/main/more_info/<%= p.id %>">More details and applications...</a>
-                    <%= out_of_stock(p.quantity, p.id) %> 
-                    <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
-                    <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img></a></td>
+                    <% if p.quantity > 0 %>
+                      <h5 class='pad'>
+                        <%= button_tag "Add to cart", name: "product_id", value: p.id %>
+                      </h5>
+                    <% else %> 
+                      "This item is currently out of stock."
+                    <%end %>
                 </table>
               </div> 
           <% else %>
