ATSrails_misc change

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,5 +17,5 @@
   <h3 style="color: #550808">50 Rio Grande Blvd, Denver CO</h3>
   <h4>Or call Jack at 720-363-0163</h4>
 </center>
-<a href="/admin">_</a>
+<a href="/admin">___</a>
 <% end %>
