--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -24,33 +24,32 @@
             <% CategorySale.where(category_id: p.category_id).each do |sale| %>
               <% if sale.percent_off > 1 %>
                 <% price = (p.price) * ((100 - sale.percent_off)/100) %>
-                  <center><h4 class="pad" style="color: red">
-                    <%= "Sales Price! $ #{"%.2f" % price}" %></h4></center>
-                  <h4 style="color: #927017"><p><center>
-                    <%= p.description.capitalize %></p></h4></center>
-                  <h5><a href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
+                  <h4 style="color: red">
+                    <%= "Sales Price! $ #{"%.2f" % price}" %></h4>
+                  <h4 class="pad" style="color: #927017"><%= p.description.capitalize %></h4>
+                  <h5><a class="pad" href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
                     More details and applications...</a></h5>
                       <% if p.quantity > 0 %>
                           <h5 class='pad'>
                               <%= button_tag "Add to cart", name: "product_id", value: p.id %>
                           </h5>
                       <% else %> 
-                        "This item is currently out of stock."
+                        <h4 class="pad">"This item is currently out of stock."</h4>
                       <%end %>
               <% else %>
                 <% if p.percent_off > 1 %>
                   <% price = (p.price) * ((100-p.percent_off)/100) %>
                   <center><h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4></center>
                 <% end %>
-                  <h4 style="color: #927017"><p><center><%= p.description.capitalize %></p></h4></center>
-                  <h5><a href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
+                  <h4 class="pad" style="color: #927017"><%= p.description.capitalize %></h4>
+                  <h5><a class="pad" href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
                     More details and applications...</a></h5>
                       <% if p.quantity > 0 %>
                         <h5 class='pad'>
                           <%= button_tag "Add to cart", name: "product_id", value: p.id %>
                         </h5>
                       <% else %> 
-                        "This item is currently out of stock."
+                        <h4 class="pad">"This item is currently out of stock."</h4>
                       <%end %>
               <% end %>   
                </td>
