ATSrails_added a:hover to image displayed that were added through drop zone

--- a/app/views/carts/final_cart.html.erb
+++ b/app/views/carts/final_cart.html.erb
@@ -26,6 +26,6 @@
 
 <br>
 ****TODO: Select payment method  ******
-<%= submit_tag 'Place Order' %><br><br>
+<%= button_tag 'Place Order' %><br><br>
 <% end %>
-<!--<%= link_to 'New Cart', new_cart_path %>--!>
+
