--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -10,16 +10,7 @@
   <div class="col-md-6 height='135'" >
     <table>       
       <th>
-      <% if Image.find_by(name: p.product_code) == nil %>
-        <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
-          <img src="/images/<%= p.image %>.jpg/" width="180" height="135"></img>
-        </a>
-      <% else %>
-        <% image = Image.find_by(name: p.product_code) %>
-        <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
-          <img src="<%= image_data_path(image.id, image.extension) %>" width="150" height="150">
-        </a>
-      <% end %>
+        <%= image_display (p) %>
       </th>
         <td><b><h3 class="pad" style="color: #550808"><%= p.name.titlecase %></h3></b>
           <b><center><p style="color=black"><i>price  </i>$<%= "%.2f" % p.price %></p></center></b>
@@ -31,13 +22,7 @@
                   <h4 class="pad" style="color: #927017"><%= p.description.capitalize %></h4>
                   <h5><a class="pad" href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
                     More details and applications...</a></h5>
-                      <% if p.quantity > 0 %>
-                          <h5 class='pad'>
-                              <%= button_tag "Add to cart", name: "product_id", value: p.id %>
-                          </h5>
-                      <% else %> 
-                        <h4 class="pad">"This item is currently out of stock."</h4>
-                      <%end %>
+                  <%= add_to_cart (p) %>
               <% else %>
                 <% if p.percent_off > 1 %>
                   <% price = (p.price) * ((100-p.percent_off)/100) %>
@@ -46,19 +31,14 @@
                   <h4 class="pad" style="color: #927017"><%= p.description.capitalize %></h4>
                   <h5><a class="pad" href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
                     More details and applications...</a></h5>
-                      <% if p.quantity > 0 %>
-                        <h5 class='pad'>
-                          <%= button_tag "Add to cart", name: "product_id", value: p.id %>
-                        </h5>
-                      <% else %> 
-                        <h4 class="pad">"This item is currently out of stock."</h4>
-                      <%end %>
+                  <%= add_to_cart (p) %>
               <% end %>   
                </td>
     </table>  
-<% end %> 
+            <% end %> 
 </div> 
 <% end %>
 </div>
-</div>                         
+</div>    
+                     
 <% end %>
