ATSrails_removed footnotes and admin_edit file

--- a/app/views/admin/category_sale.html.erb
+++ b/app/views/admin/category_sale.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "layouts/admin_edit" %>
+<%= render partial: "layouts/admin" %>
 <%= form_tag "/admin/category_sale" do %>
 <% if @error != nil %>
   <h2 style="color: blue"><%= @error %></h2>
