--- a/app/views/admin/links.html.erb
+++ b/app/views/admin/links.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "layouts/admin_edit" %>
+<%= render partial: "layouts/admin" %>
 <ul>
   <h2><li><a style="color: #927017" href="/admin/new">add a new product</a></li>
       <li><a style="color: #927017" href="/admin/:id/edit">edit and existing product</a></li>
