--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" type="text/css" href="/stylesheets/ats.css">
-<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
-</head>
-  <body class="admin">
-  <a class="pull-left pad" href="/admin/logout"><h4 style="color: #1E5A53">Log out</h4></a>
-  <a class="pull-left pad" href="/admin/links"><h4 style="color: #927017">Admin Links</h4></a>
+  <html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="/stylesheets/ats.css">
+      <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
+    </head>
+      <body class="admin">
+  
+        <a class="pull-left pad" href="/admin/logout"><h4 style="color: #1E5A53">Log out</h4></a>
+        <a class="pull-left pad" href="/admin/links"><h4 style="color: #927017">Admin Links</h4></a>
+        <br></br>
+        <hr style="color: white">
+  
+      <% yield %>
 
-  <% yield %>
-
-  </body>
-
-</html>
+      </body>
+  </html>
