ATSrails_ added quantity_input to add_to_cart helper

--- a/app/views/main/more_info.html.erb
+++ b/app/views/main/more_info.html.erb
@@ -24,15 +24,7 @@
                   <% end %>
                 <% end %>
                       <h4 class="pad"><%= @product.description %></h4>
-                      <% if @product.quantity > 0 %>
-                          <h5 class='pad'>
-                              <%= label_tag :quantity %>
-                              <%= text_field_tag :quantity, 1, size: 1 %>
-                              <%= button_tag "Add to cart", name: 'product_id', value: @product.id %>
-                          </h5>
-                      <% else %> 
-                        "This item is currently out of stock."
-                      <%end %>
+                      <%= add_to_cart (@product) %>
           </td>
       </table>             
     </div>         
