--- a/app/views/layouts/_index_product.html.erb
+++ b/app/views/layouts/_index_product.html.erb
@@ -4,20 +4,14 @@
       <% price = (p.price.to_f) * ((100-s.percent_off)/100) %>
         <div class="col-md-4">
           <table class="table">
-            <% if Image.find_by(name: p.product_code) == nil %>
-              <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
-                <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img>
-              </a>
-            <% else %>
-              <% image = Image.find_by(name: p.product_code) %>
-              <img src="<%= image_data_path(image.id, image.extension) %>" width="150" height="150">
-            <% end %>
-            <td class="pad_left"><h2 style="color: black"><%= p.name %></h2>
-              <p style="color: gray"><i>regular price $<%= "%.2f" % p.price %></i></p>
-              <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4>
-              <a href="/main/more_info/<%= p.id %>">More details and applications...</a> 
-              <%= add_to_cart (p) %>
-            </td>
+            <td class="pad_left"><h3 style="color: black"><%= p.name %></h3>
+              <%= image_display (p) %><br></br>
+              <h5><a class="pad" href="/main/more_info/<%= p.id %>">More details...</a></h5>
+              <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %>
+                <p class="pad" style="color: gray; font-size: 8pt;"><i>regular price $
+                  <%= "%.2f" % p.price %></i></p>
+              
+              <%= add_to_cart (p) %></h4>
           </table>
         </div> 
       <% else %>
@@ -25,18 +19,11 @@
           <% price = (p.price.to_f) * ((100-p.percent_off)/100) %>
               <div class="col-md-4">
                 <table class="table">
-                  <% if Image.find_by(name: p.product_code) == nil %>
-                    <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
-                      <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img>
-                    </a>
-                  <% else %>
-                    <% image = Image.find_by(name: p.product_code) %>
-                    <img src="<%= image_data_path(image.id, image.extension) %>" width="150" height="150">
-                  <% end %>
-                  <td class="pad_left"><h2 style="color: black"><%= p.name %></h2>
-                    <p style="color: gray"><i>regular price $<%= "%.2f" % p.price %></i></p>
+                  <td class="pad_left"><h3 style="color: black"><%= p.name %></h3>
+                    <%= image_display (p) %><br></br>
+                    <h5><a class="pad" href="/main/more_info/<%= p.id %>">More details...</a></h5>
                     <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4>
-                    <a href="/main/more_info/<%= p.id %>">More details and applications...</a>
+                    <h5 class="pad" style="color: gray"><i>regular price $<%= "%.2f" % p.price %></i></h5>
                     <%= add_to_cart (p) %>
                 </table>
               </div> 
